--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -58,7 +58,8 @@ $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #fff;
 $background-color           : #fff;
-$code-background-color      : #fafafa;
+$code-background-color      : #ededeb;
+$code-text-color            : #e65555;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
