--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,5 +29,11 @@ layout: compress
 
     {% include scripts.html %}
 
+<div class="footer_site">
+  <hr/>
+  <div class="footer_copyright">
+    © 2023 上海交通大学 · 何巧芝 | 基于&nbsp<a class="page_a"  href="https://github.com/RayeRen/acad-homepage.github.io">acad</a>&nbsp模板
+  </div>
+</div>
   </body>
 </html>
